--- a/index.html
+++ b/index.html
@@ -15,17 +15,22 @@
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
-<body class="main-bg">
+<body>
+    <input id="close-menu" class="close-menu" type="checkbox" aria-label="Close Menu" role="button">
+    <label class="close-menu-label" for="close-menu" title="close menu"></label>
     <aside class="menu white-bg">
         <div class="main-content menu-content">
-        <h1><a href="#home">LOGO</a></h1>
+        <h1 onclick="getElementById('close-menu').checked = false;">
+            <a href="#home">Home</a></h1>
 
         <nav>
-            <ul>
+            <ul onclick="getElementById('close-menu').checked = false;">
                 <li><a href="#intro">Intro</a></li>
                 <li><a href="#grid-one">Grid-One</a></li>
                 <li><a href="#gallery">Gallery</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#grid-two">Grid-Two</a></li>
+                <li><a href="#pricing">Pricing</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
         </div>
@@ -47,7 +52,7 @@
 
     <section id="intro" class="white-bg section">
         <div class="main-content top3-content">
-            <h2>Lorem</h2>
+            <h2>Top 3 Jobs</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae tempore ratione fugit eius nostrum, atque repellat voluptate beatae expedita impedit pariatur rem itaque quae autem! Fugit tempora obcaecati quos ad.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae tempore ratione fugit eius nostrum, atque repellat voluptate beatae expedita impedit pariatur rem itaque quae autem! Fugit tempora obcaecati quos ad.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae tempore ratione fugit eius nostrum, atque repellat voluptate beatae expedita impedit pariatur rem itaque quae autem! Fugit tempora obcaecati quos ad.</p>
@@ -56,8 +61,8 @@
 
     <section id="grid-one" class="grid-one main-bg section">
         <div class="main-content grid-one-content">
-            <h2 class="grid-main-heading">My Grid</h2>
-            <p class="grid-description">Uma breve descrição.</p>
+            <h2 class="grid-main-heading">Grid One</h2>
+            <p class="grid-description">Grade configurada para exibição de informações.</p>
             <div class="grid">
                 <article>
                     <h3>Teste 1</h3>
@@ -75,11 +80,140 @@
         </div>
     </section>
 
-    <section id="gallery" class="section white-bg">
-        <div class="main-content">
-            <h1>Teste</h1>
+    <section id="gallery" class="grid-one white-bg section">
+        <div class="main-content grid-one-content">
+            <h2 class="grid-main-heading">Gallery</h2>
+            <p class="grid-description">Uma breve coleção de imagens.</p>
+            <div class="grid">
+                <div class="gallery-img">
+                    <img src="http://source.unsplash.com/random/360x360?r=1" alt="random image from unsplash">
+                </div>
+                <div class="gallery-img">
+                    <img src="http://source.unsplash.com/random/360x360?r=2" alt="random image from unsplash">
+                </div>
+                <div class="gallery-img">
+                    <img src="http://source.unsplash.com/random/360x360?r=3" alt="random image from unsplash">               
+                </div>                <div class="gallery-img">
+                    <img src="http://source.unsplash.com/random/360x360?r=4" alt="random image from unsplash">               
+                </div>
+                <div class="gallery-img">
+                    <img src="http://source.unsplash.com/random/360x360?r=5" alt="random image from unsplash">               
+                </div>
+                <div class="gallery-img">
+                    <img src="http://source.unsplash.com/random/360x360?r=6" alt="random image from unsplash">               
+                </div>
+            </div>   
         </div>
-
     </section>
+
+    <section id="grid-two" class="grid-one main-bg section">
+        <div class="main-content grid-one-content">
+            <h2 class="grid-main-heading">Grid Two</h2>
+            <p class="grid-description">Grade configurada para exibição de informações.</p>
+            <div class="grid">
+                <article>
+                    <h3>Teste 1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat quibusdam suscipit neque iure quis dolore quae reiciendis nesciunt fugiat illo animi maiores, praesentium quo ipsa et similique odit voluptatem fugit!</p>
+                </article>
+                <article>
+                    <h3>Teste 2</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat quibusdam suscipit neque iure quis dolore quae reiciendis nesciunt fugiat illo animi maiores, praesentium quo ipsa et similique odit voluptatem fugit!</p>
+                </article>
+                <article>
+                    <h3>Teste 3</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat quibusdam suscipit neque iure quis dolore quae reiciendis nesciunt fugiat illo animi maiores, praesentium quo ipsa et similique odit voluptatem fugit!</p>
+                </article>
+            </div>   
+        </div>
+    </section>
+
+    <section id="pricing" class="white-bg section">
+        <div class="main-content top3-content">
+            <h2>Pricing</h2>
+
+            <div class="responsive-table">
+                <table>
+                    <caption>Pricing Table</caption>
+
+                    <thead>
+                        <tr>
+                            <th>Title 1</th>
+                            <th>Title 2</th>
+                            <th>Title 3</th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        <tr>
+                            <td>Content 1</td>
+                            <td>Content 2</td>
+                            <td>Content 3</td>
+                        </tr>
+                        <tr>
+                            <td>Content 1</td>
+                            <td>Content 2</td>
+                            <td>Content 3</td>
+                        </tr>
+                        <tr>
+                            <td>Content 1</td>
+                            <td>Content 2</td>
+                            <td>Content 3</td>
+                        </tr>
+
+                    </tbody>
+
+                    <tfoot>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td>Testando</td>
+                        </tr>
+                    </tfoot>
+                </table>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact" class="intro main-bg section">
+        <div class="main-content intro-content">
+            <div class="intro-text-content">
+                <h2>Contact Me</h2>
+                <p>Please, feel free to send me a message !</p>
+            </div>
+            <div class="intro-img">
+                <img src="assets/img/mail.svg" alt="Logo de HTML, CSS e JS.">
+            </div>
+            <div class="contact-form">
+                <fieldset class="form-grid">
+                    <legend>Contact Me</legend>
+
+                    <div class="form-group">
+                        <label for="first-name">First Name</label>
+                        <input type="text" name="first-name" id="first-name" placeholder="Your Name">
+                    </div>
+                    <div class="form-group">
+                        <label for="last-name">Last Name</label>
+                        <input type="text" name="last-name" id="last-name" placeholder="Your Last Name">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">E-mail</label>
+                        <input type="email" name="email" id="email" placeholder="Your E-mail">
+                    </div>
+                    <div class="form-group full-width">
+                        <label for="message">Message</label>
+                        <textarea name="message" id="message" 
+                        cols="30" rows="10" placeholder="Your Message"></textarea>
+                    </div>
+                    <div class="form-group full-width">
+                        <button type="submit">Send Message</button>
+                    </div>
+                </fieldset>
+            </div>
+        </div>
+    </section>
+    <footer id="footer" class="footer white-bg">
+        <p><a rel="nofollow" target="_blank" href="https://www.linkedin.com/in/leonardo-poveda-mayoral-734415176/">Feito com <span class="heart">♥</span> por Leonardo Mayoral</a></p>
+    </footer>
+    <a class="back-to-top" href="#">➤</a>
 </body>
 </html>
